[tool.poetry]
name = "model-explainability"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pandas = "^2.1.4"
itables = "^1.6.3"
imbalanced-learn = "^0.11.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.3"
ipython = "^8.20.0"
jupyterlab = "^4.0.10"
pytest = "^7.4.4"
plotly = "^5.18.0"
pynvim = "^0.5.0"
pytest-clarity = "^1.0.1"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
